--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
 
         <!--Start Banner Two-->
         <section class="banner-two">
-            <div class="banner-two__bg" style="background-image: url(assets/img/slider/book-library-with-open-textbook.jpg);">
+            <div class="banner-two__bg" style="background-image: url(assets/img/slider/book-library-with-open-textbook.jpeg);">
             </div>
             <div class="banner-two__shape1 wow fadeInLeft" data-wow-delay="0ms" data-wow-duration="1500ms">
                 <img class="float-bob-x" src="assets/img/shape/banner-two__shape1.png" alt="">
